Fix T96512: Crash selecting an edge

Regression in 5e5285baf621.